# Prism

./: .gitignore  LICENSE  PKG-INFO  README.md  pyproject.toml
.mimocode/plans/: 1784552081065-happy-pixel.md
prism/: __init__.py  __main__.py  bridge.py  proxy.py  pyproject.toml  slots.py  tui.py
prism/core/: bridge.py  cache.py
prism/probe/: __init__.py  capabilities.py  client.py  frontends.py  provider.py
prism/providers/: base.py  openai_compat.py
prism/translate/: __init__.py  compactor.py  errors.py  headers.py  request.py  response.py  stream.py
