[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "prism-proxy"
version     = "0.2.0"
description = "Dual-end LLM API bridge with auto schema discovery"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.11"

keywords = [
    "llm", "proxy", "anthropic", "openai", "groq", "nvidia",
    "claude", "protocol-translation", "api-bridge", "tui",
]

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "jmespath>=1.0",
    "pydantic>=2.0",
    "textual>=0.80",
]

[project.scripts]
prism = "prism.__main__:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["prism*"]
